Bug 444624 - Unable to change user/group of an element from the desktop
Summary: Unable to change user/group of an element from the desktop
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Properties dialog (other bugs)
Version First Reported In: 5.87.0
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-29 19:34 UTC by antonio
Modified: 2022-01-04 23:06 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.91
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description antonio 2021-10-29 19:34:49 UTC
STEPS TO REPRODUCE

1. Create a file on the desktop

2. Click on the mouse right button -> Properties -> Permissions


OBSERVED RESULT

Unable to change user/group.

Note that the same operation made in the Dolphin (same dialog box) is possible because the fields are editable.


EXPECTED RESULT

That the properties window called from the desktop has the same functionality as the dialog box called by Dolphin (also, when the user changes user/group, you must automatically update the desktop otherwise the previous values are shown).


SOFTWARE/OS VERSIONS

KDE Plasma Version: 5.23.2
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2
Comment 1 Nate Graham 2021-11-01 15:31:00 UTC
Works for me.
Comment 2 Bug Janitor Service 2021-11-01 20:47:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/623
Comment 3 Ahmad Samir 2021-11-01 20:48:22 UTC
Note that you can only change the user if you're root, otherwise the user combobox isn't shown. So it's only the group combobox that's not working here.
Comment 4 Ahmad Samir 2022-01-02 09:49:30 UTC
Git commit da163f5c93972bf91cbc1b2ce0c78d650348c684 by Ahmad Samir.
Committed on 02/01/2022 at 09:36.
Pushed by ahmadsamir into branch 'master'.

KPropertiesDialog: use the KFileItem when checkig if the url is local

This way we can ge the most local url and urls under e.g. desktop:/ will be
detected as local.

This fixes an issue where opening the properties dialog with a file in
desktop:/ wouldn't show the group combobox (which allows users to change the
group).
FIXED-IN: 5.88

M  +1    -1    src/widgets/kpropertiesdialog.cpp

https://invent.kde.org/frameworks/kio/commit/da163f5c93972bf91cbc1b2ce0c78d650348c684