KPropertiesDialog: use the KFileItem when checkig if the url is local

This way we can ge the most local url and urls under e.g. desktop:/ will be
detected as local.

This fixes an issue where opening the properties dialog with a file in
desktop:/ wouldn't show the group combobox (which allows users to change the
group).

BUG: 444624
FIXED-IN: 5.88